--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -34,13 +34,28 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
+
+                    {% if request.user.is_authenticated %}
+                        <ul class="navbar-nav  mb-2 mb-lg-0 ms-lg-4">
+                            <li class="nav-item dropdown">
+                                <a class="btn btn-outline-dark " id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-fill me-1"></i> {{ request.user.username }}</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#!">Editar Perfil</a></li>
+                                    <li><a class="dropdown-item" href="#!">Agregar Avatar</a></li>
+                                    <li><hr class="dropdown-divider" /></li>
+                                    <li><a class="dropdown-item" href="{% url 'auth-logout' %}">Cerrar Sesión</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    {% else %}
+                    <ul class="navbar-nav  mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item dropdown">
+                            <a class="btn btn-outline-dark " id="navbarDropdown" href="{% url 'auth-login' %}" aria-expanded="false"><i class="bi bi-person-fill me-1"></i> Iniciar Sesión</a>
+                        </li>
+                    </ul>
+
+                    {% endif %}
+                    
                 </div>
             </div>
         </nav>
