--- a/app/templates/app/detalle_trabajador.html
+++ b/app/templates/app/detalle_trabajador.html
@@ -35,7 +35,7 @@
     </tr>
     <tr>
         <td>
-            Creador Por: {{ trabajador.user_id }}
+            Creador Por: {{ trabajador.user }}
         </td>
     </tr>
 
