--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,6 +1,5 @@
-{% extends 'app/base.html' %}
-{% block contenido %}
+{% extends 'app/base.html' %} {% block contenido %}
 
-<p>Prueba de funcionamiento</p>
+<h1>Bienvenido/a</h1>
 
 {% endblock %}
