--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -24,19 +24,20 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'app-list-trabajadores' %}">Trabajadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Trabajadores</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+                            <li><a class="dropdown-item" href="{% url 'app-agregar-trabajador' %}">Agregar Trabajador</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="{% url 'app-list-trabajadores' %}">Lista Trabajadores</a></li>
+                            <li><a class="dropdown-item" href="{% url 'app-buscar-trabajador' %}">Buscar Trabajadores</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Obras</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+
                 </ul>
 
                 {% if request.user.is_authenticated %}
