--- a/login/templates/login/base_login.html
+++ b/login/templates/login/base_login.html
@@ -21,8 +21,8 @@
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5 justify-content-center">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Sistema</h1>
-                <p class="lead fw-normal text-white-50 mb-0">Comentario</p>
+                <h1 class="display-4 fw-bolder">SISTRAC</h1>
+                <p class="lead fw-normal text-white-50 mb-0">Mantenedor información trabajadores</p>
             </div>
         </div>
     </header>
