--- a/login/templates/login/base_login.html
+++ b/login/templates/login/base_login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Shop Homepage - Start Bootstrap Template</title>
+    <title>Inicio Sesión de SISTRAC</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="{% static 'login/assets/favicon.ico' %}" />
     <!-- Bootstrap icons-->
