--- a/app/templates/app/detalle_trabajador.html
+++ b/app/templates/app/detalle_trabajador.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %} {% block contenido %}
 
-<h4>Detalle Trabajador <img src="{{ imagen_url }}" style="max-width: 100px;"> </h4>
+<h4>Detalle Trabajador <img src="{{ imagen_url_trabajador }}" style="max-width: 100px;"> </h4>
 
 <table>
     <tr>
